--- a/source/pages/base.pug
+++ b/source/pages/base.pug
@@ -3,6 +3,7 @@ html
    head
    meta(charset ='utf-8')
    meta(name='viewport',content="initial-scale=1.0,width=device-width")
-   title Webpack app
+   title 
+        block title
    body
-      h1 test pug
+        block main
